updated chatgroup details